readme update and temporary agent node for memory pressure

--- a/programs/firecrawl/Pulumi.pantheon.yaml
+++ b/programs/firecrawl/Pulumi.pantheon.yaml
@@ -12,6 +12,11 @@ config:
       limits:
         memory: "512Mi"
         cpu: "500m"
+    tolerations:
+      - key: "workload-type"
+        operator: "Equal"
+        value: "gpu-inference"
+        effect: "NoSchedule"
   firecrawl:postgres:
     resources:
       requests:
