--- a/programs/nvr/Pulumi.pantheon.yaml
+++ b/programs/nvr/Pulumi.pantheon.yaml
@@ -84,6 +84,7 @@ config:
   nvr:coturn:
     realm: frigate.holdenitdown.net
     hostname: turn.holdenitdown.net
+    externalIp: "172.16.3.63"
     tls:
       enabled: true
       clusterIssuer: letsencrypt-prod
@@ -91,4 +92,5 @@ config:
       type: LoadBalancer
       annotations:
         metallb.universe.tf/address-pool: default-pool
+        metallb.universe.tf/loadBalancerIPs: "172.16.3.63"
         external-dns.alpha.kubernetes.io/hostname: turn.holdenitdown.net
