--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@pulumi/docker-build": "^0.0.12",
 		"@pulumi/kubernetes": "^4.23.0",
 		"@pulumi/pulumi": "^3.184.0",
+		"@pulumi/hcloud": "^1.29.0",
 		"@pulumi/random": "^4.18.2",
 		"@types/argon2": "^0.15.4",
 		"argon2": "^0.43.1",
