--- a/programs/opencode/Pulumi.pantheon.yaml
+++ b/programs/opencode/Pulumi.pantheon.yaml
@@ -43,3 +43,5 @@ config:
   opencode:imagePullPolicy: "Always"
   opencode:buildkit:
     stack: "organization/buildkit/pantheon"
+  opencode:dind:
+    enabled: true
