qualified docker images

--- a/docker/bitnami-postgres-pgvector/Dockerfile
+++ b/docker/bitnami-postgres-pgvector/Dockerfile
@@ -1,7 +1,7 @@
 ARG BITNAMI_POSTGRES_VERSION=17.5.0-debian-12-r12
 ARG PGVECTOR_VERSION=0.8.0
 
-FROM pgvector/pgvector:${PGVECTOR_VERSION}-pg17 AS pgvector-source
+FROM docker.io/pgvector/pgvector:${PGVECTOR_VERSION}-pg17 AS pgvector-source
 
 FROM docker.io/bitnami/postgresql:${BITNAMI_POSTGRES_VERSION}
 
