--- a/docker/speaches/Dockerfile
+++ b/docker/speaches/Dockerfile
@@ -3,7 +3,7 @@ ARG CUDA_VERSION=12.6.3
 ARG CTRANSLATE2_VERSION=4.6.0
 ARG ONNXRUNTIME_VERSION=1.20.1
 
-FROM nvidia/cuda:${CUDA_VERSION}-cudnn-devel-ubuntu22.04 AS builder
+FROM docker.io/nvidia/cuda:${CUDA_VERSION}-cudnn-devel-ubuntu22.04 AS builder
 
 ARG CTRANSLATE2_VERSION
 ARG ONNXRUNTIME_VERSION
